@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-19T08:30:00Z",
-  "count" : 122,
-  "count_minmax" : [ 122, 122 ],
-  "count_decinc" : [ -0, +122 ],
+  "timestamp" : "2022-05-19T16:57:23Z",
+  "count" : 247,
+  "count_minmax" : [ 122, 247 ],
+  "count_decinc" : [ -0, +247 ],
   "uniques" : 3,
   "uniques_minmax" : [ 3, 3 ],
   "uniques_decinc" : [ -0, +3 ]
