@@ -1,11 +1,11 @@
 {
-  "count": 5131,
+  "count": 5134,
   "uniques": 26,
   "clones": [
     {
       "timestamp": "2022-05-05T00:00:00Z",
-      "count": 191,
-      "uniques": 14
+      "count": 69,
+      "uniques": 11
     },
     {
       "timestamp": "2022-05-06T00:00:00Z",
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-05-19T00:00:00Z",
-      "count": 122,
+      "count": 247,
       "uniques": 3
     }
   ]
